--- a/posts/mini_genome_browser/index.qmd
+++ b/posts/mini_genome_browser/index.qmd
@@ -58,7 +58,7 @@ BAM 파일은 `1000genome FTP`에서 제공하는 아무 subject의 chr20 low_co
 
 
 
-## IGV 화면 예시
+## 대략적인 예상
 
 chr20:31,023,417-31,024,716
 
@@ -68,8 +68,14 @@ chr20:31,023,417-31,024,716
 
 IGV에서 Alignment를 표현하는 방식은 순차적으로 쌓인 Read를 빈공간이 없게 차곡차곡 쌓는다. 
 
-테스트를 위해 python 코드를 작성했다.
+로직 구상을 위해 python으로 코드를 작성하고 예상 출력물을 작성했다.
 
+![](python_plotly_example.png)
+
+
+실제 IGV와 약간 다른점이 있을 수 있다. IGV에서 실제로 어떤 로직으로 read를 정렬하는지 모르기 때문이다. (IGV를 들여다보면 실제로 이해가 안되는 정렬이 있다.)
+
+또한, MD 태그에서 Mismatch 및 Deletion을 얻어야 하고 CIGAR 에서 Inserstion 정보를 얻어서 Reference와 다른부분을 표시해야 한다.
 
 
 
@@ -84,6 +90,21 @@ IGV에서 Alignment를 표현하는 방식은 순차적으로 쌓인 Read를 빈
 ### Alignment
 
 기능: Read의 특정 Base를 클릭하면 Read 및 Base 정보가 출력되야한다.
-표시: Read는 forward/reverse에 따라 색을 표현하고
+표시: Read는 forward/reverse에 따라 색을 표현하고, Mismatch Base 및 Insersion, Deletion을 표현해야한다.
 
+Read Object에 대한 구성은 아래처럼 우선 진행한다.
 
+ - Alignment
+    - Sequence
+    - Shape
+    - Bases
+      - Mismatch bases
+      - Insersion
+      - Deletion
+      - Clipping
+
+Bases는  하위의 child는 Read에 대해 상대적 위치를 가지므로 표시하는데는 문제가 없다. 리소스가 걱정되긴한다.
+
+표현하는데 너무 많은 물체가 나오지 않을까 걱정된다. 여러 물체가 모였을 때 하나의 그림으로 표시하는 노드가 있으면 좋겠다.
+
+Read 자체를 Rect들의 집합으로 구성해야할까?
